src/test/ui/parser/lifetime-in-pattern.rs
fn test(&'a str) {
    //~^ ERROR unexpected lifetime `'a` in pattern
}

fn main() {
}
